projeto dos teste do usuarioDAO

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<dependencies>
+
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<!-- Dependencias do Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -78,6 +84,12 @@
 			<artifactId>spring-tx</artifactId>
 			<version>4.1.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		
 
 	</dependencies>
 	<build>
