--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,15 @@
 			<artifactId>spring-orm</artifactId>
 			<version>4.1.0.RELEASE</version>
 		</dependency>
+
+		<!-- Integração spring com Junit -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.1.0.RELEASE</version>
+		</dependency>
+
+
 		<!-- Controle de Transacoes -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -89,7 +98,7 @@
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
-		
+
 
 	</dependencies>
 	<build>
